# dashina-opengl

./: .gitignore  CMakeLists.txt  linmath.h  main.cpp
lib/glad/include/glad/: gl.h
